v2.9.0   - Moved compilation to use ninja build system on both platforms.
	 - Fixed some documentation in Spanish and added some more info on
	   the English docs.

v2.8.9   - Made printout of ACES file loaded always display full path to it.
	 - Added Open/Save menus to Image Browser (Reel List).
	 - Improved performance of drawing green cache line.
	 - Bug fixed a hanging bug which would happen when looping from
	   the last frame of a video.
	 - Made Clear Cache work on videos, too.
	 - Made .webm a valid video extension.
	 - Made shaders unpremult-gamma-premult to avoid edge
	   fringing in compositing gamma 2.2 images (OpenEXR).  
	   This option is turned on by using a different video 
	   blend mode as set in the preferences. 
	 - Added documentation in Spanish.

v2.8.8   - Fixed some crashing and hanging bugs when playing
	   backwards or scrubbing backwards.
	 - Fixed loading of image magick formats on Linux.
	 - Further refinement of reverse playback to make it faster.

v2.8.7   - Made cache a trailing cache when playing forwards, to
	   easily allow for scrubbing.
	 - Made cache a two way cache when scrubbing.
	 - Allowed user to set cache size in Preferences.  The current
	   range is 30 to 200 frames or FPS (twice the FPS).  Note
	   that the requester can be overshot to store even more frames.
	 - Fixed audio trashing memory sometimes, which could lead
	   to a crash.

v2.8.6   - Bug fix of audio caches being unlimited.
	 - Bug fix of reverse playback with audio disappearing.
	 - Further refinement of caches when scrubbing for smoother
	   playback.
	 - Audio offset works with positive values (ie. audio shifted
	   before video ).  Movies and sequences of frames can be
	   saved with added audio shifted.
	 - Added command-line flag (o) to shift audio.

v2.8.5   - Quick bug fix release to remove the bug of playback going
	   too fast due to not syncing with audio on some movie files.

v2.8.4   - Bug fixed audio playback with offsets.